Using OS X 10.9.5
Previous version VLC 2.1.5 playing internet streams with AirPlay without problems.
Using VLC 2.2.0 the audio output with AirPlay stutters.
Reseting preferences perfomed.
regards
I am using MBP 2012, Apple Time Capsule as main WiFi router and AirPort Express connected to my audio equipment. I have tried several songs out of the "Jamendo selections" provided by VLC and all are disturbed. I provide short recording from my speakers. Play with local loudspeakers and BT connected speaker is OK. I am not so familiar with providing proper log files and also do not know what you mean by "console app". Under menu item "Audio" I just selected AirPlay as output.
Thanks. Console shows a lot of airplay errors. This is out of scope of VLC. Please check your Wifi, maybe the devices are too far away and wifi reception is not optimal.
Regarding the VLC log, you can try two things: Does the problem happen as well with local files (audio and video)?
Please also try to go to preferences -> Input/Codes and set the standard cache level to a higher value (higher or highest latency). Save, restart VLC and try again.
Davidchanged title from VLC 2.2 Mac to Mac: Airplay playback stutters
changed title from VLC 2.2 Mac to Mac: Airplay playback stutters
Using OSX 10.8.6.. I can confirm the problem as well as the solution. And there was no such problem with version 2.1.5.
Please, change the default setting of the related cache size to "3000", with the OSX relase of VLC. No "ordinary" user can be expected to find the solution on his own. After all, one even needs to turn on the "expert view" of the settings window!
I would also like to confirm the problem and the proposed solution. It would be nice to have a hot-fix, as I'm sure many others are facing this problem as well (and might not be so lucky to find the right solution).
At first I modified the wrong cache size, under audio stream.This raises my question: why are the network settings hidden under audio input? Shouldn't they have their own place in the advanced menu?
Just registered to say that with VLC 2.2.1 I was having this issue when streaming audio over Airplay but using a projector via a VGA cable to watch a movie. Audio was stuttering a lot, but only with a projector, not external display and only in VLC not in Quicktime.
I followed this solution and audio now working, thanks:
Replying to [comment:7 dfuhrmann]:
Please also try to go to preferences -> Input/Codes and set the standard cache level to a higher value (higher or highest latency). Save, restart VLC and try again.
I've noticed this for a while too on OS X 10.10.5 & VLC 2.2.1.
Preferences -> Input/Codecs, Higher Latency seems to work. this makes sense cos all my music is lossless or uncompressed & larger to stream. it seems to be more noticeable with 24 bit WAV files.